--- a/doc/console/console.tex
+++ b/doc/console/console.tex
@@ -12,10 +12,30 @@ terminal.
 
 The objects you work with are \emph{lists:} lists of vertices and
 lists of edges. We concentrate on vertex lists in this manual, edge
-lists behave in the same way. All lists can be created out of the
-default list of all vertices and the internal list of all currently
-selected vertices. The latter can be made with the mouse in the
-obvious way or you can write in the command line:
+lists behave similarly. Where appropriate, we point out the
+differences.
+
+The lists are used to connect them later.
+
+
+\begin{example}[Running example]
+  For example, if one wants to create a perfect matching with $50$
+  edges, one way to do that in Gralog is to create two disjoint lists
+  of vertices and then connect them by drawing an edge from vertex $i$
+  in the first list to vertex $i$ in the second list. Well, for a
+  matching we would use a generator (see
+  Section~\ref{sec:generators}), but what if we want to add edges such
+  that already exiting $100$ vertices build a matching?
+  \label{ex:running}
+\end{example}
+
+
+\subsection{Creating lists, (de)selecting elements}
+
+All lists can be created out of the default list of all
+vertices and the internal list of all currently selected vertices. The
+latter can be made with the mouse in the obvious way or you can write
+in the command line:
 \begin{tcolorbox}
   select all vertices,
 \end{tcolorbox}
@@ -35,6 +55,10 @@ if they are already contained in the target list).
 \begin{tcolorbox}
   filter all selected where no condition to VL1
 \end{tcolorbox}
+
+When creating list ids as \texttt{VL1}, keep in mind that the names
+must be unique, in particular, it is impossible that a vertex list and
+an edge list have the same name.
 
 \subsection{Filter}
 
@@ -62,40 +86,171 @@ The full specification of the filter command is as follows. Note that
 Gralog does not distinguish between the upper and the lower cases.
 
 
-\begin{tcolorbox}
+\begin{tcolorbox}[colback=lightpink]
   FILTER <what> WHERE|ST|(SUCH THAT) <parameterS> TO <list identifier>
   [ignored trash]
 \end{tcolorbox}
  
 \noindent where
 
-\begin{tcolorbox}
-  
+\begin{tcolorbox}[colback=lightpink]
   \begin{tabular}[H]{rl}
-    <what> := &(ALL VERTICES) | (ALL EDGES)\\
-              &| ([ALL ]?SELECTED VERTICES) | ([ALL ]?SELECTED EDGES)\\
-              & | <list id> 
-  \end{tabular}
-and \texttt{<list>} can be a list of vertices or a list of edges;
-\begin{tabular}[H]{rl}
-  <parameterS> := &<parameterS> <parameterS> | <parameter> <value> \\
-                  & | <bool\_parameter> | formula <integer expression
-                    (i)>\\
-  \end{tabular}
-  and
-  \begin{tabular}[H]{rl}
-  <parameter> := &NO CONDITION | FILL|(FILL COLOR) | STROKE|(STROKE
-    COLOR) \\
-                 &| THICKNESS | WIDTH | HEIGHT | SIZE | ID\\
-                 &| SHAPE | WEIGHT | TYPE | (EDGE TYPE)|EDGETYPE \\
-                 &| DEGREE | INDEGREE | OUTDEGREE\\
-                 &| BUTTERFLY // not implemented yet
-  \end{tabular}
-  and finally
-  \begin{tabular}[H]{rl}
-  <bool\_parameter> := &HAS SELFLOOP | DIRECTED | HAS LABEL
+    <what> := &ALL VERTICES | ALL EDGES\\
+              &| [ALL ]? SELECTED VERTICES | [ALL ]? SELECTED EDGES\\
+              & | <list id> \\[0.3cm]
+    <parameters> := &<parameters> <parameters> | <boolean parameter>\\
+              & | <fixed range parameter> <value>\\
+              &| <numerical parameter> <cmp> <value> \\[0.3cm]
+%                    & | FORMULA <integer expression(i)>\\
+    <fixed range parameter> := & SHAPE | TYPE | EDGE TYPE | EDGETYPE \\[0.3cm]
+    <numerical parameter> := & <integer parameter> | <float
+                               parameter> | <string parameter>\\[0.3cm]
+    <integer parameter> := & ID | DEGREE | INDEGREE |
+                             OUTDEGREE\\[0.3cm]
+    <float parameter> := & FILL | FILL COLOR | STROKE | STROKE
+                       COLOR\\
+                     &| THICKNESS | WIDTH | HEIGHT | SIZE |
+                       WEIGHT\\[0.3cm]
+    <string parameter> := &LABEL CONTAINS\\
+    <boolean parameter> := &NO CONDITION | HAS SELFLOOP | DIRECTED | HAS
+                             LABEL\\
+              &| LABEL EMPTY | NO LABEL \\
+                     &| BUTTERFLY // not implemented yet
   \end{tabular}
 \end{tcolorbox}
+
+In other words, we can write something like
+
+\begin{tcolorbox}
+  FILTER sourceList ST FILL RED STROKE BLUE SHAPE ELLIPSE DEGREE > 3 TO targetList
+\end{tcolorbox}
+
+Let us look at the grammar closer. In \texttt{<what>} there is no
+difference between \texttt{ALL SELECTED VERTICES} and \texttt{SELECTED
+VERTICES}, the result will be the same. The \texttt{<list id>} is the
+name of a list we defined previously, it can be a list of vertices or
+a list of edges.
+
+The order of parameters in the parameter list is arbitrary. The list
+of parameters cannot be empty. If you do not want any specifications,
+choose \texttt{NO CONDITION}. In that case even if other parameters
+are given, they are not taken into account and the whole source list
+is given. This can be in particular used to duplicate every element in
+a list:
+
+\begin{tcolorbox}
+  FILTER sourceList ST NO CONDITION TO newList
+
+  FILTER sourceList ST NO CONDITION TO newList
+\end{tcolorbox}
+
+In this case \texttt{newList} will contain every element of
+\texttt{sourceList} twice. By the way, being in the command line, one
+can press $\uparrow$ (the arrow up key) to call previous commands.
+
+Table~\ref{tab:parsAndVals} explains which values the parameters can have.
+
+\begin{table}
+  \centering
+  \renewcommand{\arraystretch}{2}
+  \begin{tabular}{p{3cm}|p{5cm}|p{1.8cm}|p{5cm}}
+    \textbf{parameter} &  \textbf{possible values} & \textbf{applicable to}  & \textbf{meaning}\\
+    \hline
+    \texttt{SHAPE}     &  ELLIPSE, RECTANGLE, DIAMOND & vertices& ellipse,
+                                                                  rectangle, diamond\\
+                       &  SQUARE, CYCLE & vertices & not implemented yet\\
+    \hline
+    \texttt{STROKE} or \texttt{STROKE COLOR} (synonyms)
+                       &  WHITE, BLACK, BLUE, GREEN, RED, GRAY, \mbox{YELLOW},
+                         CYAN, MAGENTA, SILVER, MAROON, OLIVE,
+                         DARK\_GREEN, PURPLE, TEAL, NAVY, ORANGE
+                                                   & both & the colour of the
+                                                            border; other
+                                                            colours are
+                                                            possible as
+                                                            properties of
+                                                            vertices, but not
+                                                            supported by the
+                                                            filter
+                                                            command\\
+    \hline
+    \texttt{EDGE TYPE} & SHARP, ROUND, BEZIER & edges & sharp or rounded
+                                                        corners or a
+                                                        B\'{e}zier curve\\
+    \hline
+    \texttt{FILL} or \texttt{FILL COLOR} (synonyms)
+                       & as for \texttt{STROKE} & vertices & the fill color,
+                                                             otherwise as for
+                                                             \texttt{STROKE}\\
+    \hline
+    \texttt{WIDTH}     & float                 & vertices & \tcr{???}\\
+    \hline
+    \texttt{THICKNESS} & float                 & both\tcr{?} & \textcolor{red}{???}\\
+    \hline
+    \texttt{HEIGHT}     & float                & vertices  & \textcolor{red}{???}\\
+    \hline
+    \texttt{SIZE} & float                      & vertices \tcr{?}  & \textcolor{red}{???}\\
+    \hline
+    \texttt{WEIGHT} & float                      & edges  &
+                                                            \textcolor{red}{???}\\
+    \hline
+    \texttt{ID}      & non-negative integer   & both & the internal unique id of
+                                                       the vertex or of the edge\\
+    \hline
+    \texttt{DEGREE}    & non-negative integer & vertices & the degree of
+                                                           the vertex;
+                                                           only
+                                                           undirected
+                                                           edges count\\
+    \hline
+    \texttt{INDEGREE}    & non-negative integer & vertices & the in-degree of
+                                                             the vertex;
+                                                             only
+                                                             directed
+                                                             edges count\\
+    \hline
+    \texttt{OUTDEGREE}    & non-negative integer & vertices & the out-degree of
+                                                              the vertex;
+                                                              only
+                                                              directed
+                                                              edges count\\
+    \hline
+    \texttt{HAS SELFLOOP}  & no value & vertices & true if the vertex
+                                                   has a self-loop\\
+    \hline
+    \texttt{NO SELFLOOP}  & no value & vertices & true if the vertex
+                                                  has no self-loop\\
+    \hline
+    \texttt{LABEL EMPTY} or \texttt{NO LABEL} (synonyms)
+                       & no value & vertices & true if the label is
+                                               empty\\
+    \hline
+    \texttt{LABEL CONTAINS} & string & vertices & true if the label
+                                                  contains the given string\\
+    \hline
+  \end{tabular}
+  \caption{Parameters and their values}
+  \label{tab:parsAndVals}
+\end{table}
+
+\subsection{Sorting the lists}
+
+Before connecting lists of vertices (recall Example~\ref{ex:running})
+we probably want to sort them, so that we know what vertex has
+number~$i$. The lists can be sorted by
+
+\begin{tcolorbox}[colback=lightpink]
+  SORT <list id> <parameter>
+\end{tcolorbox}
+where \texttt{parameter} is one of \texttt{LEFTRIGHT},
+\texttt{RIGHTLEFT}, \texttt{TOPDOWN}, \texttt{BOTTOMUP}, \texttt{ID
+  ASC}, \texttt{ID DECS}, \texttt{LABEL ASC}, \texttt{LABEL DESC}. The
+former four parameters imply a sorting according to the corresponding
+coordinate of vertices on the screen, \texttt{ID ASC} sorts by the id
+in  the ascending order, \texttt{ID DESC} sorts by the id
+in  the descending order and \texttt{LABEL} sorts alphabetically
+(ascending or descending) by the label. If the labels of two vertices
+are equal, the vertices keep their relative order.
 
 %%% Local Variables:
 %%% mode: latex
