--- a/doc/console/main.tex
+++ b/doc/console/main.tex
@@ -70,8 +70,9 @@
     enlarge left by=0mm,
     boxsep=5pt,
     arc=0pt,outer arc=0pt,
+    after={\par\vspace{\baselineskip}\noindent},
   }
-
+  \renewcommand{\arraystretch}{2}
 \usepackage{color}
 
 \definecolor{dkgreen}{rgb}{0,0.6,0}
